kubeconsole/kubeconsole-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-console-ingress
  namespace: kube-console
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
   - hosts:
       - kube-console.domain.com
     secretName: kube-console-tls
  rules:
   - host: kube-console.domain.com
     http:
       paths:
        - path:
          backend:
           serviceName: kube-console-service
           servicePort: 8000
